test/language/spec/syntax/invalid/unclosed_many_braces.topo
// TEST: unclosed braces should produce error and terminate
// EXPECT-ERROR: expected

namespace app {
  public:
    class A {
      public:
        class B {
          public:
            class C {
              public:
                void f();
